Refactor for Java 8 compatibility