@@ -18,6 +18,7 @@ package org.springframework.web.reactive.function.server;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.function.Function;
@@ -171,7 +172,7 @@ class PathResourceLookupFunction implements Function<ServerRequest, Mono<Resourc
 		if (path.contains("%")) {
 			try {
 				// Use URLDecoder (vs UriUtils) to preserve potentially decoded UTF-8 chars
-				String decodedPath = URLDecoder.decode(path, StandardCharsets.UTF_8);
+				String decodedPath = URLDecoder.decode(path, "UTF-8");
 				if (isInvalidPath(decodedPath)) {
 					return true;
 				}
@@ -180,7 +181,7 @@ class PathResourceLookupFunction implements Function<ServerRequest, Mono<Resourc
 					return true;
 				}
 			}
-			catch (IllegalArgumentException ex) {
+			catch (IllegalArgumentException | UnsupportedEncodingException ex) {
 				// May not be possible to decode...
 			}
 		}
@@ -199,8 +200,8 @@ class PathResourceLookupFunction implements Function<ServerRequest, Mono<Resourc
 			resourcePath = resource.getURL().toExternalForm();
 			locationPath = StringUtils.cleanPath(this.location.getURL().toString());
 		}
-		else if (resource instanceof ClassPathResource classPathResource) {
-			resourcePath = classPathResource.getPath();
+		else if (resource instanceof ClassPathResource) {
+			resourcePath = ((ClassPathResource) resource).getPath();
 			locationPath = StringUtils.cleanPath(((ClassPathResource) this.location).getPath());
 		}
 		else {
@@ -219,12 +220,12 @@ class PathResourceLookupFunction implements Function<ServerRequest, Mono<Resourc
 		if (resourcePath.contains("%")) {
 			// Use URLDecoder (vs UriUtils) to preserve potentially decoded UTF-8 chars...
 			try {
-				String decodedPath = URLDecoder.decode(resourcePath, StandardCharsets.UTF_8);
+				String decodedPath = URLDecoder.decode(resourcePath, "UTF-8");
 				if (decodedPath.contains("../") || decodedPath.contains("..\\")) {
 					return true;
 				}
 			}
-			catch (IllegalArgumentException ex) {
+			catch (IllegalArgumentException | UnsupportedEncodingException ex) {
 				// May not be possible to decode...
 			}
 		}
